# hw7

./: Dockerfile  README.md  django  docker-compose.yaml  env.simple  lms.json  payments.json  pyproject.toml  users.json
config/: settings.py  urls.py
lms/: models.py  paginators.py  permissions.py  serializes.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_link_video.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_link_video.py  0004_alter_lesson_link_video_subscribe.py  0005_course_price.py  0005_subscribe.py
users/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: createsu.py  seeds.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_date_of_payment.py  0004_alter_payment_owner.py  0005_remove_payment_payment_amount_payment_payment_id_and_more.py
